# rs_template

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml  init.sql
.github/workflows/: rust.yml
conf/: server.toml
libs/auth/: Cargo.toml
libs/auth/src/: access.rs  claim.rs  lib.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  lib.rs  middleware.rs  result.rs
server/src/route/: hello.rs  mod.rs  swagger_ui.rs  user.rs
server/src/service/: database.rs
sql/: init.sql
src/: server.rs  utils.rs
tests/: rc_test.rs  utils.rs
web/: .env.example  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/interviewDist/: index.html
web/interviewDist/assets/: 403-WooZjLsz.js  404-DQf4hIpM.js  index-2Ij32ToK.js  index-BffWAO3d.css  index-BxAhR42f.js  index-D-LMYwxZ.js  index-gmlcx4fu.js
web/server/: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/server/src/: main.ts
web/server/src/common/constants/: cache-key.ts
web/server/src/pages/dashboard/: index.vue
web/server/src/pages/errors/: 403.vue  404.vue
web/server/src/pages/login/: index.vue
web/server/src/pages/login/api/: index.ts  type.ts
web/server/src/pinia/stores/: app.ts  user.ts
web/server/src/router/: config.ts  helper.ts
web/server/src/types/: api.d.ts
web/src/: App.vue  main.ts
web/src/common/cache/: cookies.ts  localstorage.ts
web/src/common/constants/: cache-key.ts
web/src/components/: DaisyModal.vue
web/src/http/: axios.ts
web/src/pages/login/: index.vue
web/src/pages/login/api/: index.ts
web/src/pages/redirect/: index.vue
web/src/router/: guard.ts  index.ts
web/src/types/: env.d.ts  router.d.ts
web/src/utils/: modal.ts
