[package]
name = "rs_template"
version = "0.1.0"
edition = "2024"

default-run = "server"
# set proxy
[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[[bin]]
name = "server"
path = "src/server.rs"

[workspace]
members = [
    ".",
    "server",
    "libs/auth",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

http = "1.3"
axum = "0.8"
tokio = "1.47"
serde = "1.0"
serde_json = "1.0"
clap = "4.5"
anyhow = "1.0.100"
tracing = "0.1.41"
rust-embed = "8.7" # 嵌入 打包后的页面
mime_guess = "2.0" # 用于猜测mine type

utoipa-axum = { version = "0.2", features = ["debug"] }
utoipa = { version = "5.1.1", features = ["axum_extras", "debug", "default"] }
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}

[dependencies]
server = { path="server"}
clap = {workspace = true, features = ["derive"]}
axum = {workspace = true}
anyhow = {workspace = true}
tokio = { workspace = true, features = ["full"] }
serde = {workspace = true}
serde_json = {workspace = true}

toml = "0.9"
log = "0.4.28"


[profile.release_lto]
inherits = "release"
lto = true

[features]
default = ["webp"]
webp = []
openapi = ["server/openapi"]
webui = ["server/webui"]