[package]
name = "server"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
auth = { path= "../libs/auth" }

http = { workspace = true}
serde_json = {workspace = true}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["signal"] }
axum = { workspace = true, features = ["multipart", "tracing"] }
tracing = {workspace = true}
rust-embed ={workspace = true, features = ["axum-ex"], optional = true } # 设置可选 嵌入前端
mime_guess = { workspace = true, optional = true }

utoipa = { workspace= true, optional = true }
utoipa-axum = {workspace = true ,optional = true}
utoipa-swagger-ui = { workspace= true, optional = true }

log = "0.4.28"
# 提供常用的中间件
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# Database dependencies
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-rustls",
    "with-uuid",
]}

sea-orm-migration = "1.0"

[features]
webui = ["dep:rust-embed", "dep:mime_guess"]
openapi= ["dep:utoipa","dep:utoipa-swagger-ui", "dep:utoipa-axum"]
